--- a/debian/rules
+++ b/debian/rules
@@ -1,3 +1,12 @@
 #!/usr/bin/make -f
 %:
-	dh $@
+        dh $@ --parallel -- -Bdebian/build
+
+override_dh_auto_configure:
+        dh_auto_configure -- -DENABLE_SHARED=true
+
+override_dh_install:
+        mkdir -p debian/tmp/usr/lib
+        cp debian/build/libringclient.so.1.0.0 debian/tmp/usr/lib/
+        cp debian/build/libringclient.so debian/tmp/usr/lib/
+        dh_install
