--- a/debian/rules
+++ b/debian/rules
@@ -6,7 +6,8 @@ override_dh_auto_configure:
 	dh_auto_configure -- -DENABLE_SHARED=true
 
 override_dh_install:
-	mkdir -p debian/tmp/usr/lib
+	mkdir -p debian/tmp/usr/lib/cmake/LibRingClient/
 	cp debian/build/libringclient.so.1.0.0 debian/tmp/usr/lib/
 	cp debian/build/libringclient.so debian/tmp/usr/lib/
+	cp debian/build/LibRingClientTargets.cmake debian/tmp/usr/lib/cmake/LibRingClient/
 	dh_install
