--- a/debian/rules
+++ b/debian/rules
@@ -1,10 +1,3 @@
 #!/usr/bin/make -f
 %:
-	dh $@ --parallel -- -Bdebian/build
-
-override_dh_install:
-	mkdir -p debian/tmp/usr/lib/cmake/LibRingClient/
-	cp debian/build/libringclient.so.1.0.0 debian/tmp/usr/lib/
-	cp debian/build/libringclient.so debian/tmp/usr/lib/
-	cp debian/build/LibRingClientTargets.cmake debian/tmp/usr/lib/cmake/LibRingClient/
-	dh_install
+	dh $@ --parallel
